Fixes environment default

--- a/app/environment.ini
+++ b/app/environment.ini
@@ -4,7 +4,7 @@
 ; project environment (DEVELOP || PRODUCTION).
 ; This effects: DB connection, Mail-Server, SSO, ESI configurations in this file
 ; configuration below
-SERVER                      =   DEVELOP
+SERVER                      =   PRODUCTION
 
 [ENVIRONMENT.DEVELOP]
 ; path to index.php (Default: leave blank == "auto-detect")
