--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     "ikkez/f3-cortex": "dev-master#af035616ae8d708776117e05603dac43835f3d9a",
     "ikkez/f3-sheet": "0.4.*",
     "xfra35/f3-cron": "1.2.*",
-    "monolog/monolog": "2.*",
+    "monolog/monolog": "2.3.4",
     "swiftmailer/swiftmailer": "6.2.*",
     "league/html-to-markdown": "4.9.*",
     "cache/redis-adapter": "1.0.*",
