--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
     "react/socket": "1.3.*",
     "react/promise-stream": "1.2.*",
     "clue/ndjson-react": "1.2.*",    
-    "tyrheimdaleve/pathfinder_esi": "2.1.1"
+    "tyrheimdaleve/pathfinder_esi": "dev-master",
+    "firebase/php-jwt": "^5.4"
   },
   "suggest": {
     "ext-redis": "Redis can be used as cache backend."
