SSO changes: updates constants and environment

--- a/app/environment.ini
+++ b/app/environment.ini
@@ -30,6 +30,7 @@ DB_UNIVERSE_PASS            =
 CCP_SSO_URL                 =   https://sisilogin.testeveonline.com
 CCP_SSO_CLIENT_ID           =
 CCP_SSO_SECRET_KEY          =
+CCP_SSO_JWK_CLAIM           =   login.eveonline.com
 CCP_SSO_DOWNTIME            =   11:00
 
 ; CCP ESI API
@@ -83,6 +84,7 @@ DB_CCP_PASS                 =
 CCP_SSO_URL                 =   https://login.eveonline.com
 CCP_SSO_CLIENT_ID           =
 CCP_SSO_SECRET_KEY          =
+CCP_SSO_JWK_CLAIM           =   login.eveonline.com
 CCP_SSO_DOWNTIME            =   11:00
 
 ; CCP ESI API
